# stembach

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy-pages.yml
bifurcation/: logistic.py  main.py
bifurcation-mandelbrot/: main.py
ifs-attractor/: Cargo.toml  README.md
ifs-attractor/src/: main.rs
l-systems/: Fractal.py  main.py  main.tcss  mandelbrot.py
presentation/: .gitignore  dist.html  main.py  pyproject.toml  render.sh  video.py
presentation/presentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: main.rs  square.rs  thread_pool.rs
