[project]
name = "presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "manim==0.18.1",
    "manim-slides==5.3.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pyqt6>=6.8.1",
    "pyside6>=6.8.2.1",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
